--- a/package.json
+++ b/package.json
@@ -9,21 +9,28 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.38.0",
+    "@google/generative-ai": "^0.24.1",
+    "@prisma/adapter-pg": "^7.4.1",
     "@prisma/client": "^7.4.0",
+    "date-fns": "^4.1.0",
     "firebase-admin": "^13.6.1",
     "framer-motion": "^12.34.0",
     "lucide-react": "^0.564.0",
     "next": "16.1.6",
+    "pg": "^8.18.0",
     "prisma": "^7.4.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-fast-marquee": "^1.6.5",
     "recharts": "^3.7.0",
+    "svix": "^1.85.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
